# gable

./: .gitignore  LICENSE-MIT  README.md
gable-rust/: Cargo.toml
gable-rust/assets/locales/: en.json  localization.json  zh.json
gable-rust/assets/templates/cangjie/: class.tpl  enums.temp  enums.tpl  template.temp
gable-rust/assets/templates/cpp/: enums.temp  enums.tpl  template.temp  template.tpl
gable-rust/assets/templates/csharp/: enums.cs  enums.temp  enums.tpl  template.cs  template.tpl
gable-rust/assets/templates/golang/: enums.temp  enums.tpl  template.temp  template.tpl
gable-rust/assets/templates/java/: class.tpl  enums.temp  enums.tpl  template.temp  template.tpl
gable-rust/assets/templates/javascript/: enums.temp  enums.tpl  template.temp  template.tpl
gable-rust/assets/templates/lua/: enums.temp  enums.tpl  template.temp  template.tpl
gable-rust/assets/templates/proto2/: enums.proto  enums.temp  enums.tpl  template.proto  template.tpl
gable-rust/assets/templates/proto3/: enums.proto  enums.tpl  template.proto  template.tpl
gable-rust/assets/templates/python/: class.tpl  enums.temp  enums.tpl  template.temp
gable-rust/assets/templates/rust/: class.tpl  enums.tpl  (+3 more)
gable-rust/src/: gable_app.rs  main.rs
gable-rust/src/cli/: cli_export.rs  cli_import.rs  gable_cli.rs  mod.rs
gable-rust/src/common/: constant.rs  excel_util.rs  global.rs  locales.rs  localization.rs  localization_manager.rs  mod.rs  res.rs  setting.rs  utils.rs
gable-rust/src/gui/: component.rs  file_watcher.rs  gable_about.rs  gable_app.rs  gable_build_setting.rs  gable_explorer.rs  gable_form.rs  gable_log.rs  gable_menu.rs  gable_navigation.rs  gable_popup.rs  localization.rs  mod.rs  tree_item.rs
gable-rust/src/test/: test_app.rs
(+135 files in other folders)
