[package]
name = "gable-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
eframe = "0.32.0"
egui_extras = "0.32.0"
image = "0.25.6"
lazy_static = "1.5.0"
log = "0.4.27"
once_cell = "1.21.3"
rayon = "1.10.0"
rfd = "0.15.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
