[package]
name = "gable"
version = "1.0.0"
edition = "2024"
authors = ["Aifei Liu <329737941@qq.com>"]

[dependencies]
calamine = "0.30.0"
chrono = "0.4.41"
clap = {version= "4.5.48",features = ["derive"]}
eframe = "0.32.0"
egui_extras = "0.32.0"
egui_table = "0.4.0"
image = "0.25.6"
include_dir = "0.7.4"
lazy_static = "1.5.0"
log = "0.4.27"
notify = "8.2.0"
once_cell = "1.21.3"
prost = "0.14.1"
prost-build = "0.14.1"
rayon = "1.10.0"
rfd = "0.15.4"
rust_xlsxwriter = "0.90.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version ="1.0.142", features = ["preserve_order"] }
serde_yaml = "0.9.34"
tera = "1.20.0"
umya-spreadsheet = "2.3.2"
